package ClientUS.NLP.Other;

public class a_rel {

    public String name_attribute;
    public String name_class;

    public a_rel(String name_attribute, String name_classe){
        this.name_attribute = name_attribute;
        this.name_class = name_classe;
    }
    public String getName_attribute() {
        return name_attribute;
    }

    public void setName_attribute(String name_attribute) {
        this.name_attribute = name_attribute;
    }

    public String getName_class() {
        return name_class;
    }

    public void setName_class(String name_class) {
        this.name_class = name_class;
    }





}
