package ClientUS.NLP.Other;

import java.util.ArrayList;
import java.util.List;

public class h_rel_new {

    List<String> class_1;
    List<String> class_2;
    List<String> type;

    public h_rel_new(){
        this.class_1 = new ArrayList<>();
        this.class_2 = new ArrayList<>();
        this.type = new ArrayList<>();
    }

    public List<String> getClass_1() {
        return class_1;
    }

    public void setClass_1(List<String> class_1) {
        this.class_1 = class_1;
    }

    public List<String> getClass_2() {
        return class_2;
    }

    public void setClass_2(List<String> class_2) {
        this.class_2 = class_2;
    }

    public List<String> getType() {
        return type;
    }

    public void setType(List<String> type) {
        this.type = type;
    }
    public void print(){
        for(int i = 0;i<class_2.size();i++){
            System.out.println("["+class_1.get(i)+","+class_2.get(i)+ ","+type.get(i)+"]");
        }
    }

    public void addClass1(String class1){
        this.class_1.add(class1);
    }
    public void addClass2(String class2){
        this.class_2.add(class2);
    }

    public void addType(String type){
        this.type.add(type);
    }
}
